// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IndexPattern Data Source #getPublicAPI renderDimensionPanel should render a dimension panel 1`] = `
<ChildDragDropProvider
  setDragging={[MockFunction]}
>
  <DragDrop
    droppable={false}
    onDrop={[Function]}
  >
    Dimension Panel
    <EuiComboBox
      compressed={false}
      data-test-subj="indexPattern-dimension"
      fullWidth={false}
      isClearable={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "Value of timestamp",
            "value": "0",
          },
          Object {
            "label": "Value of bytes",
            "value": "1",
          },
          Object {
            "label": "Value of source",
            "value": "2",
          },
        ]
      }
      selectedOptions={Array []}
      singleSelection={
        Object {
          "asPlainText": true,
        }
      }
    />
  </DragDrop>
</ChildDragDropProvider>
`;

exports[`IndexPattern Data Source #renderDataPanel should match snapshot 1`] = `
<ChildDragDropProvider
  setDragging={[MockFunction]}
>
  Index Pattern Data Source
  <div>
    <EuiComboBox
      compressed={false}
      data-test-subj="indexPattern-switcher"
      fullWidth={false}
      isClearable={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "label": "Fake Index Pattern",
            "value": "1",
          },
          Object {
            "label": "Fake Rollup Pattern",
            "value": "2",
          },
        ]
      }
      selectedOptions={
        Array [
          Object {
            "label": "Fake Index Pattern",
            "value": "1",
          },
        ]
      }
      singleSelection={
        Object {
          "asPlainText": true,
        }
      }
    />
    <div>
      <DragDrop
        draggable={true}
        key="timestamp"
        value={
          Object {
            "aggregatable": true,
            "name": "timestamp",
            "searchable": true,
            "type": "date",
          }
        }
      >
        timestamp
      </DragDrop>
      <DragDrop
        draggable={true}
        key="bytes"
        value={
          Object {
            "aggregatable": true,
            "name": "bytes",
            "searchable": true,
            "type": "number",
          }
        }
      >
        bytes
      </DragDrop>
      <DragDrop
        draggable={true}
        key="source"
        value={
          Object {
            "aggregatable": true,
            "name": "source",
            "searchable": true,
            "type": "string",
          }
        }
      >
        source
      </DragDrop>
    </div>
  </div>
</ChildDragDropProvider>
`;
